[package]
name = "kryss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive", "rc"] }
serde_json = "*"
sxd-document = "*"
sxd-xpath = "*"
sxd_html = "*"
url = "*"
reqwest = { version = "*", features = ["blocking"] }
rustyline = { version = "14.0.0", features = ["derive"] }
colored = "*"
term_size = "*"
console = "*"
cmdui = { git = "https://github.com/erikoest/cmdui.git" }
